# production-engineering-samples

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
audio/: audio_temporal_map.py
backend/: cursor_pagination.py  safe_uploads.py
reliability/: atomic_write.py  runtime_drift.py  state_machine.py
security/: metadata_signing.py
tests/: test_atomic_write.py  test_audio_temporal_map_smoke.py  test_cursor_pagination.py  test_metadata_signing_behavior.py  test_metadata_signing_smoke.py  test_runtime_drift.py  test_safe_uploads.py  test_state_machine.py
